--- a/package.json
+++ b/package.json
@@ -19,10 +19,9 @@
     "storybook:build": "storybook build"
   },
   "dependencies": {
-    "@mantine/carousel": "^7.11.2",
+    "@mantine/carousel": "7.11.2",
     "@mantine/core": "7.11.2",
     "@mantine/hooks": "7.11.2",
-    "@mantinex/mantine-logo": "^1.0.1",
     "@next/bundle-analyzer": "^14.2.4",
     "@tabler/icons-react": "^3.6.0",
     "embla-carousel-autoplay": "^8.1.7",
