--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-switch": "^7.0.0",
+    "reactjs-popup": "^2.0.6",
     "tabler-icons-react": "^1.56.0"
   },
   "devDependencies": {
