--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next": "14.2.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-intersection-observer": "^9.13.0",
     "react-switch": "^7.0.0",
     "tabler-icons-react": "^1.56.0"
   },
