--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "18.3.1",
     "react-intersection-observer": "^9.13.0",
     "react-switch": "^7.0.0",
+    "sharp": "^0.33.5",
     "tabler-icons-react": "^1.56.0"
   },
   "devDependencies": {
