--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.24.7",
+    "@ducanh2912/next-pwa": "^10.2.8",
     "@next/eslint-plugin-next": "^14.2.4",
     "@types/node": "^20.14.8",
     "@types/react": "18.3.3",
@@ -56,6 +57,7 @@
     "prettier": "^3.3.2",
     "stylelint": "^16.6.1",
     "stylelint-config-standard-scss": "^13.1.0",
-    "typescript": "5.5.2"
+    "typescript": "5.5.2",
+    "webpack": "^5.93.0"
   }
 }
